# unforeseen-consequences

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml  init-db.sql
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 2025_09_22_1217-e2d4b26ed826_initialize_database.py
src/app/: containers.py  lifespan.py  logging.py  main.py
src/app/api/rest/: controllers.py
src/app/api/rest/v1/: controllers.py
src/app/api/rest/v1/auth/: controllers.py
src/app/api/rest/v1/auth/oauth2/: controllers.py
src/app/api/rest/v1/health/: controllers.py  views.py
src/app/api/rest/v1/users/: controllers.py  views.py
src/app/config/: app.py  database.py  oauth_providers.py  settings.py
src/app/domain/: exceptions.py
src/app/domain/entities/: base.py
src/app/domain/entities/social/: __init__.py  entity.py  exceptions.py  repository.py
src/app/domain/entities/user/: __init__.py  constants.py  entity.py  exceptions.py  repository.py
src/app/domain/interfaces/: uow.py
src/app/domain/interfaces/repositories/: social.py  user.py
src/app/infra/db/: base.py  constants.py  container.py  exceptions.py  mixins.py  models.py
src/app/infra/db/sqla/: base.py  container.py  mixins.py  models.py  uow.py
src/app/infra/middleware/: cors.py
src/app/infra/security/: dependencies.py  jwt_utils.py  oauth2.py
src/app/services/: user.py
