[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "alembic-enums>=0.4.1",
    "asyncpg>=0.30.0",
    "authlib>=1.6.4",
    "dependency-injector>=4.48.1",
    "fastapi[all]>=0.116.2",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uuid-utils>=0.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
]

line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = [
    "B", # bugbear
    "I", # isort
    "Q", # quotes
    "C4", # comprehensions
    "F", # pyflakes
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "T20", # print finder
    "TID", # tidy imports
]
ignore = ["E203", "E266", "E501", "F403", "F401", "E701", "PLR0913"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
exclude = ["*.pyi"]

quote-style = "double"
indent-style = "space"
line-ending = "auto"

skip-magic-trailing-comma = false

docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "orm",
    "third-party",
    "first-party",
    "local-folder",
]
lines-between-types = 1

[tool.ruff.lint.isort.sections]
"orm" = ["sqlalchemy", "alembic"]
